...
                                                    <rect key="frame" x="14" y="11" width="386" height="21"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blocklist file type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tg5-sI-chF" userLabel="blocklistFileTypeLabel
                                                            <rect key="frame" x="0.0" y="0.0" width="256" height="21"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="blocklistFileTypeLabel" label="blocklistFileTypeLabel"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hosts" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uho-yq-NP6" userLabel="f
                                                            <rect key="frame" x="256" y="0.0" width="130" height="21"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="fileTypeLabel" label="fileTypeLabel"/>
...
                                                    <rect key="frame" x="14" y="11" width="386" height="21"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entries in blocklist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGE-aT-EvH" userLabe
                                                            <rect key="frame" x="0.0" y="0.0" width="256" height="21"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="entriesInBlocklistLabel" label="entriesInBlocklistLabel"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyE-2N-tif" userLabel="entry
                                                            <rect key="frame" x="256" y="0.0" width="130" height="21"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="entryCountLabel" label="entryCountLabel"/>
...
                                                    <rect key="frame" x="14" y="6" width="386" height="31"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Block subdomains" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QKu-ex-0yt" userLabel="blockSubdomainsLabel">
                                                            <rect key="frame" x="0.0" y="0.0" width="337" height="31"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="blockSubdomainsLabel" label="blockSubdomainsLabel"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yli-Fo-xvQ" userLabel="blockSubdomainsSwitch">
                                                            <rect key="frame" x="337" y="0.0" width="51" height="31"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="blockSubdomainsSwitch" label="blockSubdomainsSwitch"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="z2S-HS-baR" userLabel="useCustomBlocklistSwitch">
                                                            <rect key="frame" x="337" y="0.0" width="51" height="31"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="useCustomBlocklistSwitch" label="useCustomBlocklistSwitch"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UCg-D1-cwE" userLabel="blacklistURL">
                                                    <rect key="frame" x="8" y="8" width="365" height="81"/>
                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hum-vh-ZcQ" userLabel="reloadButton">
                                                    <rect key="frame" x="14" y="7" width="71" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="reloadButton" label="reloadButton"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gEh-PZ-UCG" userLabel="restoreDefaultSettingsButton">
                                                    <rect key="frame" x="14" y="7" width="164" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="restoreDefaultSettingsButton" label="restoreDefaultSettingsButton"/>
