...
      - Parameter status: The status message to display in the alert
   */
  fileprivate func showMessageWithStatus(_ status: ListUpdateStatus) {
    GCDMainQueue.async(execute: { () -> Void in
      self.activityIndicator.stopAnimating()
      
      let alert = UIAlertController(title: "Ad Scrubber Blocklist Reload", message: status.rawValue, preferredStyle: UIAlertControllerStyle.alert)
      alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: nil))
      self.present(alert, animated: true, completion: nil)
      
    })
  }
  
  /**
...
